--- a/index.html
+++ b/index.html
@@ -99,8 +99,11 @@
             </div>
         </section>
 
-
     </main>
+
+    <footer class="footer" id="footer">
+        <p>Page created by <a href="https://github.com/scrumpylungs">Ciaran Concannon</a> as part of <a href="https://www.freecodecamp.org/">freeCodeCamp.org</a> Web Development Project.</p> <p> Galaxy Vape logo artwork originally by <a href="https://dribbble.com/Gektor9">Gektor9</a></p>
+    </footer>
 
 
 </body>
