fixed jump link destinations + organised images folder

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <title>Galaxy Vape - Homepage</title>
 </head>
 
-<body>
+<body id="body">
     <header id="header">
         <input type="checkbox" class="nav-toggle" id="nav-toggle">
         <nav id="nav-bar">
             <ul id="nav-list">
-                <li class="nav-item"><a class="nav-link" href="#title">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#about-section">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#product-section">Products</a></li>
-                <li class="nav-item"><a class="nav-link" href="#video">Learn More</a></li>
+                <li class="nav-item"><a class="nav-link" href="#body">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#about-us">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#products">Products</a></li>
+                <li class="nav-item"><a class="nav-link" href="#learn-more">Learn More</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
             </ul>
         </nav>
@@ -78,7 +78,7 @@
         <section class="bottom-grid">
             <div class="video-section" id="video-section">
                 <div class="video-text">
-                    <h2 class="subtitle" id="video-title">Learn More</h2>
+                    <h2 class="subtitle" id="learn-more">Learn More</h2>
                     <p id="video-label">Learn more about the benefits of vaping over smoking</p>
                 </div>
                 <video controls width="100%"
@@ -86,6 +86,7 @@
             </div>
             <div class="contact-section" id="contact-section">
                 <h2 class="subtitle" id="contact">Contact Us</h2>
+                <p id="video-label">Please get in touch with our team for more information</p>
                 <form method="POST" action="https://www.freecodecamp.com/email-submit" class="contact-form" id="form">
                     <label for="name">Name</label>
                     <input type="text" name="name" id="name" required placeholder="Please Enter Name">
