changes image links to new cloud storage

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <label for="nav-toggle" class=nav-toggle-label>
             <span></span>
         </label>
-        <img src="https://res.cloudinary.com/scrumpylungs/image/upload/v1589128973/freeCodeCamp-product-landing-page/galaxy-juice-logo_isbdbv.jpg"
-            alt="Vape Voyage Logo" class="header-img" id="header-img">
+        <img src="https://res.cloudinary.com/cjcon90/image/upload/v1589740232/FCC/galaxy-vape/galaxy-juice-logo_isbdbv_vcpmjc.jpg"
+            alt="Galaxy Vape Logo" class="header-img" id="header-img">
     </header>
     <main>
         <div id="title-div">
@@ -46,21 +46,21 @@
         <section class="product-section" id="product-section">
             <div class="product-div" id="product-liquid">
                 <figure>
-                    <img src="https://res.cloudinary.com/scrumpylungs/image/upload/v1589217017/freeCodeCamp-product-landing-page/liquid_gfrdea.png"
+                    <img src="https://res.cloudinary.com/cjcon90/image/upload/v1589740232/FCC/galaxy-vape/liquid_gfrdea_zmpwuh.png"
                         alt="illustrated image of vape liquid" class="product-img" id="liquid-img">
                     <figcaption>A massive range of e-liquids, flavours and VG/PG ratios to choose from</figcaption>
                 </figure>
             </div>
             <div class="product-div" id="product-pen">
                 <figure>
-                    <img src="https://res.cloudinary.com/scrumpylungs/image/upload/v1589219437/freeCodeCamp-product-landing-page/pen-vape_bacidt.png"
+                    <img src="https://res.cloudinary.com/cjcon90/image/upload/v1589740232/FCC/galaxy-vape/pen-vape_bacidt_vwjf2r.png"
                         alt="illustrated image of vape pen" class="product-img" id="pen-img">
                     <figcaption>High quality vape pens for beginners, casual use or for vaping on the go</figcaption>
                 </figure>
             </div>
             <div class="product-div" id="product-box">
                 <figure>
-                    <img src="https://res.cloudinary.com/scrumpylungs/image/upload/v1589128973/freeCodeCamp-product-landing-page/box-mod_fvcyvj.png"
+                    <img src="https://res.cloudinary.com/cjcon90/image/upload/v1589740232/FCC/galaxy-vape/box-mod_fvcyvj_lngcxi.png"
                         alt="illustrated image of box mod" class="product-img" id="box-img">
                     <figcaption>Powerful and customizable box mods for enthusiasts, to achieve maximum clouds and
                         incredible flavour</figcaption>
@@ -68,7 +68,7 @@
             </div>
             <div class="product-div" id="product-misc">
                 <figure>
-                    <img src="https://res.cloudinary.com/scrumpylungs/image/upload/v1589219929/freeCodeCamp-product-landing-page/batteries_ts0yik.png"
+                    <img src="https://res.cloudinary.com/cjcon90/image/upload/v1589740232/FCC/galaxy-vape/batteries_ts0yik_w6um0k.png"
                         alt="illustrated image of batteries" class="product-img" id="misc-img">
                     <figcaption>Every accessory you could need, to make sure you are never stuck without your galaxy
                         vape!</figcaption>
@@ -82,7 +82,7 @@
                     <p id="video-label">Learn more about the benefits of vaping over smoking</p>
                 </div>
                 <video controls width="100%"
-                    src="https://res.cloudinary.com/scrumpylungs/video/upload/v1589228032/freeCodeCamp-product-landing-page/Vaping_StoriesBenefits_of_Vaping_m8slq8.mp4" id="video">Your browser does not support the video tag</video>
+                    src="https://res.cloudinary.com/cjcon90/video/upload/v1589740242/FCC/galaxy-vape/Vaping_StoriesBenefits_of_Vaping_m8slq8_krqchi.mp4" id="video">Your browser does not support the video tag</video>
             </div>
             <div class="contact-section" id="contact-section">
                 <h2 class="subtitle" id="contact">Contact Us</h2>
